    * ADD: some useful device files - input/event devices increased from 5 to 10, pts devices from 5 to 10, /dev/cdrom,dvd,sg..., /dev/uinput, /dev/rfcomm0-49, /dev/vhci
    * ADD: netcast_config_check.sh script to verify which NetCast config versions are used
    * ADD: support for both old and new NetCast configs and NetCast upgrade/downgrade handling
    * UPDATE: tmux upgraded from 1.4 to 1.5 with use dynamic libncurses library instead of staticly linked code
    * UPDATE: busybox upgraded from 1.18.4(+passwd patch) to 1.19.2(+crond patch) with additional setserial, ubi*, users, groups, whois, pstree, pwdx,.. applets
    * CHANGE: /etc/rc.d/rc.mount rewrite for more flexible partitions handling
    * CHANGE: improved cramfs xip partitions check before mounting - to prevent kernel crash in case of corrupted lgapp partition (RELEASE)
    * CHANGE: partition mounting based on partition names instead of static mtd numbers - this should improve compatibility even with unknown models
    * CHANGE: settings separated from rcS into /etc/rc.d/rc.settings
    * CHANGE: Internet Browser can be separated from WebUI (and proxied) with it's own NetCast icon in WebUI settings
    * CHANGE: increase Bluetooth transfer storage from 10MB to 50MB
    * CHANGE: support for OpenLGTV_BCM dir on any partition number on any of two USB ports in TV
    * CHANGE: installation is now being done via single installation file - OpenLGTV_BCM-vX.Y.Z.tar.sh
    * CHANGE: for safety reasons installation is now being done in chrooted virtual environment to ensure rootfs stability while flashing procedure
    * CHANGE: use konfabulator-exec.sh even for US models to give ability to run custom ywe from USB storage device
    * CHANGE: squashfs image is now being build with 256KB block size for better compression of partition image
    * CHANGE: bootlogd is now used for boot logging instead of ugly 'tee' redirections and 'date' timestamps