@@ -1,1 +1,1 @@
-0.5.0-alpha4
+0.5.0-devel
