@@ -1,5 +1,5 @@
 #!/bin/sh
-# OpenLGTV BCM 0.5.0-alpha4 installation script v.1.90 by xeros
+# OpenLGTV BCM 0.5.0-devel installation script v.1.90 by xeros
 # Source code released under GPL License
 
 # it needs $file.sqf and $file.sha1 files in the same dir as this script
@@ -29,7 +29,7 @@ fi
 # forced rebooting option disabled for manual upgrade/installations
 rebooting=0
 
-ver=0.5.0-alpha4
+ver=0.5.0-devel
 supported_rootfs_ver="V1.00.51 Mar 01 2010"
 supported_rootfs_ver2011="V1.00.18 Jan 10 2011"
 development=1
@@ -157,7 +157,7 @@ ntpclient -h pool.ntp.org -s -c 1 > /dev/null 2>&1
 
 echo "" | tee -a $log
 date 2>&1 | tee -a $log
-echo "OpenLGTV BCM 0.5.0-alpha4 installation script for $platform platform by xeros" | tee -a $log
+echo "OpenLGTV BCM 0.5.0-devel installation script for $platform platform by xeros" | tee -a $log
 
 #if [ "$2" = "autoupgrade" ]
 if [ "autoupgrade" = "1" ]
